I forgot to add many files so same as last commit: I setup text on the pagewhich required man small changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
   </head>
   <body>
-    <div id="app" class="flex center"></div>
+    <header> 
+      <h1> Exploration of Olympic Data</h1>
+      <h4> By Enrique Collin and Ryan Li (Sara Zhao has gone missing!) </h4>
+    </header>
+    <text id='intro'></text>
+    <img src='olympic_rings.jpg'></img>
+<!--    <div id="app" class="flex center"></div> -->
     <script src="bundle.js"></script>
   </body>
 </html>
