Removed group members names for clarity purposes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header> 
       <h1> Exploration of Olympic Data</h1>
-      <h4> By Enrique Collin and Ryan Li (Sara Zhao has gone missing!) </h4>
+      <h4> By Enrique Collin </h4>
     </header>
     <text id='intro'></text>
     <img src='olympic_rings.jpg'></img>
